--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "mongoose": "^8.19.3",
     "multer": "^2.0.2",
     "stripe": "^19.3.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.9.3",
     "zod": "^4.2.1"
   },
